[package]
name = "leaks_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
dotenv = "0.15"
couchbase = { version = "1.0.0-alpha.4", features = ["libcouchbase-static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
lazy_static = "1.4"
suffix= "1.3"
lib = { path = "../lib" }
