[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suffix= "1.2"
clap = { version = "3.1.10", features = ["derive"] }
log = "0.4"
csv = "1.1"
flate2 = "1.0"
tar = "0.4"
env_logger = "0.9"
lib = { path = "../lib" }
regex = "1.5"
lazy_static = "1.4"
indicatif = "0.16"
infer = "0.7"
